// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`defaultIntentRequestHandler > ChatResult metadata after multiple turns only has tool results from current turn 1`] = `undefined`;

exports[`defaultIntentRequestHandler > ChatResult metadata after multiple turns only has tool results from current turn 2`] = `undefined`;

exports[`defaultIntentRequestHandler > confirms on max tool call iterations, and continues to iterate 1`] = `
{
  "errorDetails": {
    "message": "Failed to get copilot token: TypeError: fetch failed
    at node:internal/deps/undici/undici:13510:13
    at processTicksAndRejections (node:internal/process/task_queues:105:5)
    at SimulationTestCopilotTokenManagerFromGitHubToken.fetchCopilotTokenFromGitHubToken (/Users/paulwang/Desktop/tmp/vscode-copilot-chat/src/platform/authentication/test/node/simulationTestCopilotTokenManager.ts:71:15)
Cause:
Error: getaddrinfo ENOTFOUND api.github.com",
  },
}
`;

exports[`defaultIntentRequestHandler > makes a successful request with a single turn 1`] = `
{
  "errorDetails": {
    "message": "Failed to get copilot token: TypeError: fetch failed
    at node:internal/deps/undici/undici:13510:13
    at processTicksAndRejections (node:internal/process/task_queues:105:5)
    at SimulationTestCopilotTokenManagerFromGitHubToken.fetchCopilotTokenFromGitHubToken (/Users/paulwang/Desktop/tmp/vscode-copilot-chat/src/platform/authentication/test/node/simulationTestCopilotTokenManager.ts:71:15)
Cause:
Error: getaddrinfo ENOTFOUND api.github.com",
  },
}
`;

exports[`defaultIntentRequestHandler > makes a successful request with a single turn 2`] = `
{
  "telemetrySenderEvents": [],
  "telemetryServiceEvents": [
    {
      "eventName": "exception",
      "eventType": "error",
      "measurements": undefined,
      "properties": {
        "error": "Error: Failed to get copilot token: TypeError: fetch failed
    at node:internal/deps/undici/undici:13510:13
    at processTicksAndRejections (node:internal/process/task_queues:105:5)
    at SimulationTestCopilotTokenManagerFromGitHubToken.fetchCopilotTokenFromGitHubToken (/Users/paulwang/Desktop/tmp/vscode-copilot-chat/src/platform/authentication/test/node/simulationTestCopilotTokenManager.ts:71:15)
Cause:
Error: getaddrinfo ENOTFOUND api.github.com",
        "origin": "Error",
      },
    },
  ],
}
`;

exports[`defaultIntentRequestHandler > makes a tool call turn 1`] = `
{
  "errorDetails": {
    "message": "Failed to get copilot token: TypeError: fetch failed
    at node:internal/deps/undici/undici:13510:13
    at processTicksAndRejections (node:internal/process/task_queues:105:5)
    at SimulationTestCopilotTokenManagerFromGitHubToken.fetchCopilotTokenFromGitHubToken (/Users/paulwang/Desktop/tmp/vscode-copilot-chat/src/platform/authentication/test/node/simulationTestCopilotTokenManager.ts:71:15)
Cause:
Error: getaddrinfo ENOTFOUND api.github.com",
  },
}
`;

exports[`defaultIntentRequestHandler > makes a tool call turn 2`] = `
{
  "telemetrySenderEvents": [],
  "telemetryServiceEvents": [
    {
      "eventName": "exception",
      "eventType": "error",
      "measurements": undefined,
      "properties": {
        "error": "Error: Failed to get copilot token: TypeError: fetch failed
    at node:internal/deps/undici/undici:13510:13
    at processTicksAndRejections (node:internal/process/task_queues:105:5)
    at SimulationTestCopilotTokenManagerFromGitHubToken.fetchCopilotTokenFromGitHubToken (/Users/paulwang/Desktop/tmp/vscode-copilot-chat/src/platform/authentication/test/node/simulationTestCopilotTokenManager.ts:71:15)
Cause:
Error: getaddrinfo ENOTFOUND api.github.com",
        "origin": "Error",
      },
    },
  ],
}
`;
